Bug 96655 - OPENGL: Zoom slider visualization is corrupted
Summary: OPENGL: Zoom slider visualization is corrupted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.2
Keywords:
: 96735 (view as bug list)
Depends on:
Blocks: Impress-OpenGL
  Show dependency treegraph
 
Reported: 2015-12-22 00:36 UTC by Andy
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2015-12-22 00:36:23 UTC
Te zoom slider sowhn at the right end of the status bar shows a small circle showing the present zoom level. This circle moved left or right when you changed zoom level.
In 5.1.0.1 instead, when you change zoom the circle moves but the previous one remains visible, and after some clicks you have the slider line covered by a multitude of partially overlapping circles, a real mess.
Comment 1 m.a.riosv 2015-12-22 03:16:46 UTC
Hi @Andy, seems another OpenGL issue, for me disabling it in Menu/Tools/Options/LibreOffice/View - Use OpenGL for all rendering, solves the problem.
Comment 2 Andy 2015-12-22 09:38:39 UTC
Thanks for the hint, but if it is a problem making openGL work with such a simple thing, that has worked for years, why use it then??
Comment 3 m.a.riosv 2015-12-27 12:28:54 UTC
*** Bug 96735 has been marked as a duplicate of this bug. ***
Comment 4 m.a.riosv 2015-12-27 16:08:50 UTC
Some comments from Michael Meeks:

https://people.gnome.org/~michael/blog/2014-11-10-opengl.html
Comment 5 Michael Meeks 2016-01-09 23:43:18 UTC
Fix for master waiting for CI: https://gerrit.libreoffice.org/21300
Fix for -5-1 awaiting review: https://gerrit.libreoffice.org/21301

Thanks for filing !
Comment 6 Commit Notification 2016-01-11 10:00:03 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f5a9ca46efc801f79cdc00a3583646936bec689

tdf#96655 - clear non-offscreen status bar controls before render.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-01-12 21:43:24 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e098c48501ba193a7062b4afe2e768c0996464c&h=libreoffice-5-1

tdf#96655 - clear non-offscreen status bar controls before render.

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.