tdf#96655 - clear non-offscreen status bar controls before render.

Change-Id: I02a85ae4572dc23df2157af1cf164a0f82701613
Reviewed-on: https://gerrit.libreoffice.org/21300
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>